@@ -64,16 +64,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
 import|;
 end_import
@@ -85,16 +75,6 @@ operator|.
 name|util
 operator|.
 name|Locale
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -409,22 +389,6 @@ operator|.
 name|util
 operator|.
 name|SimpleOrderedMap
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|util
-operator|.
-name|SuppressForbidden
 import|;
 end_import
 
@@ -2942,69 +2906,6 @@ return|return
 name|rc
 return|;
 block|}
-annotation|@
-name|SuppressForbidden
-argument_list|(
-name|reason
-operator|=
-literal|"Need currentTimeMillis, commit time should be used only for debugging purposes, "
-operator|+
-literal|" but currently suspiciously used for replication as well"
-argument_list|)
-comment|/*   Also see SolrIndexSplitter.setCommitData    */
-DECL|method|setCommitData
-specifier|private
-name|void
-name|setCommitData
-parameter_list|(
-name|IndexWriter
-name|iw
-parameter_list|)
-block|{
-specifier|final
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|commitData
-init|=
-operator|new
-name|HashMap
-argument_list|<>
-argument_list|()
-decl_stmt|;
-name|commitData
-operator|.
-name|put
-argument_list|(
-name|SolrIndexWriter
-operator|.
-name|COMMIT_TIME_MSEC_KEY
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|iw
-operator|.
-name|setLiveCommitData
-argument_list|(
-name|commitData
-operator|.
-name|entrySet
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 DECL|method|prepareCommit
 specifier|public
 name|void
@@ -3047,6 +2948,8 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
+name|SolrIndexWriter
+operator|.
 name|setCommitData
 argument_list|(
 name|iw
@@ -3392,6 +3295,8 @@ name|hasUncommittedChanges
 argument_list|()
 condition|)
 block|{
+name|SolrIndexWriter
+operator|.
 name|setCommitData
 argument_list|(
 name|writer
@@ -4151,6 +4056,8 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// todo: refactor this shared code (or figure out why a real CommitUpdateCommand can't be used)
+name|SolrIndexWriter
+operator|.
 name|setCommitData
 argument_list|(
 name|writer
