@@ -54,27 +54,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -102,7 +82,35 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|Fields
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|FilterCodecReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriter
 import|;
 end_import
 
@@ -145,34 +153,6 @@ operator|.
 name|index
 operator|.
 name|PostingsEnum
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|Fields
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexWriter
 import|;
 end_import
 
@@ -347,22 +327,6 @@ operator|.
 name|cloud
 operator|.
 name|HashBasedRouter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|util
-operator|.
-name|SuppressForbidden
 import|;
 end_import
 
@@ -1098,6 +1062,8 @@ block|}
 comment|// we commit explicitly instead of sending a CommitUpdateCommand through the processor chain
 comment|// because the sub-shard cores will just ignore such a commit because the update log is not
 comment|// in active state at this time.
+name|SolrIndexWriter
+operator|.
 name|setCommitData
 argument_list|(
 name|iw
@@ -1154,68 +1120,6 @@ block|}
 block|}
 block|}
 block|}
-block|}
-annotation|@
-name|SuppressForbidden
-argument_list|(
-name|reason
-operator|=
-literal|"Need currentTimeMillis, commit time should be used only for debugging purposes, "
-operator|+
-literal|" but currently suspiciously used for replication as well"
-argument_list|)
-DECL|method|setCommitData
-specifier|private
-name|void
-name|setCommitData
-parameter_list|(
-name|IndexWriter
-name|iw
-parameter_list|)
-block|{
-specifier|final
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|commitData
-init|=
-operator|new
-name|HashMap
-argument_list|<>
-argument_list|()
-decl_stmt|;
-name|commitData
-operator|.
-name|put
-argument_list|(
-name|SolrIndexWriter
-operator|.
-name|COMMIT_TIME_MSEC_KEY
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|iw
-operator|.
-name|setLiveCommitData
-argument_list|(
-name|commitData
-operator|.
-name|entrySet
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
 DECL|method|split
 name|FixedBitSet
