@@ -44,6 +44,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|concurrent
 operator|.
 name|atomic
@@ -160,11 +180,11 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|core
+name|common
 operator|.
-name|DirectoryFactory
+name|util
 operator|.
-name|DirContext
+name|SuppressForbidden
 import|;
 end_import
 
@@ -179,6 +199,22 @@ operator|.
 name|core
 operator|.
 name|DirectoryFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|DirectoryFactory
+operator|.
+name|DirContext
 import|;
 end_import
 
@@ -557,6 +593,79 @@ name|numOpens
 operator|.
 name|incrementAndGet
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|SuppressForbidden
+argument_list|(
+name|reason
+operator|=
+literal|"Need currentTimeMillis, commit time should be used only for debugging purposes, "
+operator|+
+literal|" but currently suspiciously used for replication as well"
+argument_list|)
+DECL|method|setCommitData
+specifier|public
+specifier|static
+name|void
+name|setCommitData
+parameter_list|(
+name|IndexWriter
+name|iw
+parameter_list|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Calling setCommitData with IW:"
+operator|+
+name|iw
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|commitData
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|commitData
+operator|.
+name|put
+argument_list|(
+name|COMMIT_TIME_MSEC_KEY
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|setLiveCommitData
+argument_list|(
+name|commitData
+operator|.
+name|entrySet
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|setDirectoryFactory
